2010-07-22
    * logging of spam message was wrong. Fixed it, 
       - set.logger.info must be self.logger.info
    Author: Bas van der Vlies

    * logging of notification error was wrong. Fixed it, closes #212
       - set.logger.error must be self.logger.error
    Reported by:  adam dot lucke at srd-berlin dot de
    Author: Bas van der Vlies

    * Removed a lot of obsolete code due to using UserDict
    Author: Bas van der Vlies
  
2010-07-21
    * added a new option 'ticket_permission_system'. Can be set to:
      - trac: Then it will check if the report has the right trac
        permission to create or modify a ticket. closes #202

      - update_restricted_to_participants: A ticket update is allowed only if:
        1) the updater is the reporter,
        2) the updater is in the CC
        3) the updater has trac permission to update the ticket.
        If the update is denied, a new ticket will be generated instead as to
        not loose the issue . closes #203

    Authors:  kris add tsampa dot org & Bas van der Vlies


   * Switch for logging to the python logging module and add some new 
     options to control the behaviour inspired by the trac logging module:
      - log_type, default syslog
      - log_level, default info
      - log_format, email2trac <project name>
      - log_file, none

     Can be set to the same values as trac logging

     Author: Bas van der Vlies

   * removed trac 0.9 support
     
2010-07-12
  * Do not check if notification is enabled, let Trac determine if a
    notfication is enabled and which interface/plugin is used, eg:
    announcerplugin

    Author: Bas van der Vlies

2010-07-06
  * Fixed several errors in ticket update: 
     - Changed the regex expression. It must end with ':'.    
     - The email was lost if the ticket id was unknown. If ticket
       id is unknown a new ticket will be created.

    Reported by: SARA grid team
    Fixed by: Bas van der Vlies
       


2010-06-28